--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
+    "gulp-copy": "0.0.2",
     "gulp-jshint": "^1.10.0",
     "gulp-less": "^3.0.3",
     "gulp-minify-css": "^1.1.1",
